# hepia-github

./: .gitignore  README.md  Vagrantfile
aglo/Ex/: .gitignore
aglo/Ex/ex4/: Makefile
aglo/Ex/ex5/: Makefile
aglo/Ex/ex6/: Makefile
aglo/example/: Makefile
aglo/example/src/: main.c
algo/Ex/: Makefile
algo/Ex/ex16/: Makefile
algo/Ex/ex7/: Makefile
first/math-app/TP1-remake/: main.py
first/math-app/TP1-sutter/: .gitignore  helpers.py
first/math-app/TP2 2/: 2_plat_principal.py  helpers.py
fourth/distributedgo/: .env.example  README.md  go.mod  go.sum  main.go
fourth/distributedpython/: README.md  client.py  config.py  requirements.txt  server.py
fourth/google-storage/: .env.example  README.md  go.mod  go.sum  main.go
fourth/nword/: .gitignore  constants.mjs  create.mjs  gns3.rsa  package-lock.json  package.json  pnpm-lock.yaml  pyvenv.cfg  remove.mjs
math-app/TP1-remake/: helpers.py
math-app/TP1-sutter/: main.py
math-app/TP2/: 1_amuse_bouche.py  3_dessert.py  helpers.py
math-app/fourier/: helpers.py  main.py
math-cs/rsa/: bezout.py  main.py  prime.py  rsa.py
second/: .gitignore
second/concurrente/: Vagrantfile  thread_example.c
second/os/: .gitignore  Vagrantfile
second/poo2020/: .gitignore
second/prog-sec/: Vagrantfile  shellcheck.sh  zsh.sh
third/algo/TP_00/: TP05_floyd_warshall.txt  main.py  pyproject.toml
third/compilation/: .gitignore
third/ioo/: 01_vacances.drawio  02_modelisation_structurelle.drawio
third/reseaux-par-la-pratique/: README.md
third/securite-des-systemes-dinformations/: eratosthene.py
(+671 files in other folders)
